tests/expectations/compiler/finalize/finalize_name_mismatch_fail.out
Error [ETYC0372005]: Unknown function `test.aleo/finalize_mint_public`
    --> compiler-test:7:24
     |
   7 |         return final { finalize_mint_public(receiver, amount); };
     |                        ^^^^^^^^^^^^^^^^^^^^
